--- a/views/composants/nav.ejs
+++ b/views/composants/nav.ejs
@@ -2,7 +2,7 @@
     <nav>
         <div class="nav-left">
             <i onclick="menu()" id="bx-menu" class='bx bx-menu'></i>
-            <h3>LafyShop</h3>
+            <h3 onclick="accueil()">LafyShop</h3>
         </div>
         <div class="nav-right">
             <i id="bx-search" class='bx bx-search'></i>
