--- a/views/infinixPage.ejs
+++ b/views/infinixPage.ejs
@@ -43,6 +43,7 @@
     <h3><strong>Infinix</strong></h3>
     <br> <br>
     <% infinixs.forEach((produit) => { %>
+      <a href="/infinix/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -54,6 +55,7 @@
       <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
       </div>
       </div>
+      </a>
 
 
       <% }); %>
