--- a/views/oppoPage.ejs
+++ b/views/oppoPage.ejs
@@ -37,12 +37,13 @@
   <div class="main">
     <div class="d-flex">
       <a style="text-decoration: none; color: black;" href="/phone">Telephone</a> /
-      <a style="text-decoration: none; color: black;" href="/iphone">Infinix</a>
+      <a style="text-decoration: none; color: black;" href="#">Oppo</a>
     </div>
     <br> <br>
     <h3><strong>Oppo</strong></h3>
     <br> <br>
     <% oppos.forEach((produit) => { %>
+      <a href="/oppo/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -54,6 +55,7 @@
       <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
       </div>
       </div>
+      </a>
 
 
       <% }); %>
