--- a/views/telTools.ejs
+++ b/views/telTools.ejs
@@ -21,7 +21,7 @@
 
   <!-- mon css here -->
   <link rel="stylesheet" href="/css/telTools.css">
-  <title>Tecno</title>
+  <title>Accessoires de telephone</title>
 </head>
 
 <body id="body">
@@ -44,6 +44,7 @@
     <br> <br>
     
     <% telTools.forEach((produit) => { %>
+      <a href="/teltools/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -55,6 +56,7 @@
       <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
       </div>
       </div>
+      </a>
 
 
       <% }); %>
