--- a/views/Detail.ejs
+++ b/views/Detail.ejs
@@ -20,9 +20,10 @@
 
 
   <!-- mon css here -->
-  <link rel="stylesheet" href="/css/hpPage.css">
+  <link rel="stylesheet" href="/css/produit-list.css">
   <link rel="stylesheet" href="/css/detail.css">
-    <head>Montre connecter </head>
+
+  <head>details wiews</head>
 
 <body id="body">
 
@@ -32,15 +33,15 @@
   <%- include('composants/panier.ejs') %>
 
 
-<br> <br><br> <br><br>
-<div class="d-flex justify-content-between" style="width: 40%;">
-  <a href="#" onclick="goBack()">Retour</a>
-</div>
-<br>
-<%- include('composants/detailsMain.ejs') %>
+  <br> <br><br> <br><br>
+  <div class="d-flex justify-content-between" style="width: 40%;">
+    <a href="#" onclick="goBack()">Retour</a>
+  </div>
+  <br>
+  <%- include('composants/detailsMain.ejs') %>
 
 
- 
+
 
 
   <!-- FOOTER ICI  -->
@@ -54,7 +55,78 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
   <script src="/script/index.js"></script>
+  <script src="/script/detail.js"></script>
 
+  <!-- Inclure la bibliothèque UUID depuis le CDN -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script> -->
+
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      // Attendre que la bibliothèque UUID soit chargée
+      window.onload = function() {
+        const addToCartBtn = document.getElementById('addToCartBtn');
+
+        addToCartBtn.addEventListener('click', function() {
+          // Récupérer les détails du produit
+          const productName = '<%= product.nom %>';
+          const productPrice = '<%= product.prix %>';
+          const selectedQuantity = document.getElementById('Quantite').value;
+          const productUrl = '<%= product.url %>';
+          const productInfo = '<%= product.info %>';
+
+          // Récupérer l'élément details-main par son ID
+          const productDetails = document.getElementById('productDetails');
+          const productId = productDetails.getAttribute('data-product-id');
+
+
+
+          // Construire l'objet produit
+          const product = {
+            Id: productId,
+            name: productName,
+            price: productPrice,
+            quantity: selectedQuantity,
+            url: productUrl,
+            info: productInfo
+          };
+
+          // Ajouter le produit au panier
+          addToCart(product);
+        });
+      };
+    });
+
+    function addToCart(product) {
+      // Récupérer le panier depuis le localStorage
+      const cart = JSON.parse(localStorage.getItem('lafyshop')) || [];
+
+      // Récupérer l'élément details-main par son ID
+      const productDetails = document.getElementById('productDetails');
+      const productId = productDetails.getAttribute('data-product-id');
+      // Vérifier si le produit existe déjà dans le panier en comparant l'ID
+      const isProductInCart = cart.some(p => p.Id === productId);
+
+      if (isProductInCart) {
+        // Le produit existe déjà, afficher une alerte
+        alert('Déjà ajouté au panier');
+        return;
+      } else {
+        // Ajouter le produit au panier
+        cart.push(product);
+
+        // Mettre à jour le localStorage avec le nouveau panier
+        localStorage.setItem('lafyshop', JSON.stringify(cart));
+
+        // Afficher un message ou effectuer d'autres actions si nécessaire
+        alert('Ajouté au panier')
+      }
+
+
+
+
+    }
+  </script>
 </body>
 
 
