--- a/views/composants/nav.ejs
+++ b/views/composants/nav.ejs
@@ -7,7 +7,11 @@
         <div class="nav-right">
             <i id="bx-search" class='bx bx-search'></i>
             <div class="bar-vertical"></div>
-            <i onclick="panier()" class='bx bxs-shopping-bag-alt'></i>
+            <div style="position: relative; display: inline-block;">
+                <i onclick="panier()" class='bx bxs-shopping-bag-alt'></i>
+                <div class="point-rouge" style=" display: none; background-color: red; width: 10px; height: 10px; position: absolute; top: 0; right: 0; z-index: 40; border-radius: 50%;"></div>
+            </div>
+                        
         </div>
     </nav>
 
