boucle dans le panier addes & panier css

--- a/views/composants/detailsMain.ejs
+++ b/views/composants/detailsMain.ejs
@@ -5,8 +5,8 @@
     </div>
     <div class="details-info">
         <h2><strong><%= product.nom %></strong></h2>
+        <h4 style="color: grey; text-decoration: line-through;"><%= product.faux_prix %> CFA</h4>
         <h2><%= product.prix %> CFA</h2>
-        <h3 id="h3" style="color: grey;"><%= product.info %></h3>
         <br>
         <p><%= product.details %></p>
         <span>Quantite :</span> <br>
