--- a/views/composants/panier.ejs
+++ b/views/composants/panier.ejs
@@ -1,23 +1,30 @@
 <div class="monPanier" id="monPanier">
-    <div class="top">
-        <i onclick="close_panier()" style="font-size: 3rem; " class='bx bx-right-arrow-alt'></i>
-        <h3 >Mon panier </h3>
-    </div>
-    <div class="center">
+  <div class="top">
+    <i onclick="close_panier()" style="font-size: 3rem; " class='bx bx-right-arrow-alt'></i>
+    <h3>Mon panier </h3>
+  </div>
+  <div class="center">
 
-        <div class="panier-vide shadow-sm" onclick="accueil()">
-            <h4>Votre panier est vide 🛒</h4> <br>
-            <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
-            <button>Voir les meilleures offres</button>
-        </div>
+    <div class="panier-vide shadow-sm" onclick="accueil()">
+      <h4>Votre panier est vide 🛒</h4> <br>
+      <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
+      <button>Voir les meilleures offres</button>
+    </div>
 
 
+  </div>
+  <div class="panier-footer">
+    <div class="footer-top">
+      <span><strong>Total</strong></span> <span>Nombre</span>
     </div>
-    <div class="panier-footer">
-        <div class="footer-top">
-            <span><strong>Total</strong></span> <span>Nombre de produits</span>
-        </div>
-        <button type="button" onclick="commander()">Commander</button>
-    </div>
+    <button type="button" onclick="commander()">Commander</button>
+  </div>
 </div>
 
+
+<!-- Ajoutez ce script à la fin de votre fichier HTML ou à l'endroit approprié -->
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    
+  });
+</script>
