suppression de produit dans le panier added

--- a/views/Detail.ejs
+++ b/views/Detail.ejs
@@ -162,7 +162,7 @@
                 <p>Quantite : ${product.quantity}</p>
                 <div style="display: flex; align-items: center; justify-content: space-between;">
                     <p style="color: rgb(159, 9, 9);"><strong>${product.price} CFA</strong></p>
-                    <i style="font-size: 1.3rem;" class='bx bx-trash' ></i>
+                    <i style="font-size: 1.3rem;" class='bx bx-trash' onclick="removeFromCart('${product.Id}')" ></i>
                 </div>
             </div>
         </div>
