--- a/views/Detail.ejs
+++ b/views/Detail.ejs
@@ -117,39 +117,40 @@
         // Mettre à jour le localStorage avec le nouveau panier
         localStorage.setItem('lafyshop', JSON.stringify(cart));
 
-          // Appeler la fonction pour mettre à jour le panier
-          updateCart();
+        // Appeler la fonction pour mettre à jour le panier
+        updateCart();
+        pointRouge();
 
         // Afficher un message ou effectuer d'autres actions si nécessaire
         alert('Ajouté au panier')
       }
 
       // Fonction pour mettre à jour le contenu du panier
-    function updateCart() {
-      // Récupérer l'élément du panier
-      const panierElement = document.getElementById('monPanier');
+      function updateCart() {
+        // Récupérer l'élément du panier
+        const panierElement = document.getElementById('monPanier');
 
-      // Récupérer le panier depuis le localStorage
-      const cart = JSON.parse(localStorage.getItem('lafyshop')) || [];
+        // Récupérer le panier depuis le localStorage
+        const cart = JSON.parse(localStorage.getItem('lafyshop')) || [];
 
 
-          // Sélectionner l'élément où vous souhaitez afficher les produits du panier
-    const centerElement = panierElement.querySelector('.center');
-    const footerTopElement = panierElement.querySelector('.footer-top');
+        // Sélectionner l'élément où vous souhaitez afficher les produits du panier
+        const centerElement = panierElement.querySelector('.center');
+        const footerTopElement = panierElement.querySelector('.footer-top');
 
-      // Si le panier est vide, afficher un message approprié
-      if (cart.length === 0) {
-        centerElement.innerHTML = `
+        // Si le panier est vide, afficher un message approprié
+        if (cart.length === 0) {
+          centerElement.innerHTML = `
                     <div class="panier-vide shadow-sm" onclick="accueil()">
                         <h4>Votre panier est vide 🛒</h4> <br>
                         <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
                         <button>Voir les meilleures offres</button>
                     </div>
                 `;
-                footerTopElement.innerHTML = '';
-      } else {
-        // Si le panier n'est pas vide, construire le HTML pour chaque produit
-        const cartHTML = cart.map(product => `
+          footerTopElement.innerHTML = '';
+        } else {
+          // Si le panier n'est pas vide, construire le HTML pour chaque produit
+          const cartHTML = cart.map(product => `
 
                 <div class="produit-panier" style=" padding: 10px; display: flex; border: 1px solid rgba(128, 128, 128, 0.173); margin: 10px;">
             <div class="img-box" style="width: 40%; ">
@@ -169,24 +170,47 @@
 
                 `).join('');
 
-        // Injecter le HTML dans l'élément du panier
-        centerElement.innerHTML = cartHTML;
+          // Injecter le HTML dans l'élément du panier
+          centerElement.innerHTML = cartHTML
+          localStorage.setItem('point_rouge', 'on');
 
-         // Mettre à jour le total et le nombre de produits
-      const total = cart.reduce((acc, product) => acc + parseFloat(product.price) * parseInt(product.quantity), 0);
-      const totalQuantity = cart.reduce((acc, product) => acc + parseInt(product.quantity), 0);
-      footerTopElement.innerHTML = `<span><strong>Total: ${total.toFixed(2)} CFA</strong></span> <span>Nombre de produits: ${totalQuantity}</span>`;
-  
+         
+
+          // Mettre à jour le total et le nombre de produits
+          const total = cart.reduce((acc, product) => acc + parseFloat(product.price) * parseInt(product.quantity), 0);
+          const totalQuantity = cart.reduce((acc, product) => acc + parseInt(product.quantity), 0);
+          footerTopElement.innerHTML = `<span><strong>Total: ${total.toFixed(2)}0 CFA</strong></span> <span>Nombre: ${totalQuantity}</span>`;
+
+        }
+
+        // Mettre à jour d'autres éléments du panier (total, nombre de produits, etc.) si nécessaire
+        // ...
+
+        // Vous pouvez également ajouter des événements ou des fonctionnalités supplémentaires ici
+
       }
+      
+      function pointRouge() {
+            // point_rouge 
 
-      // Mettre à jour d'autres éléments du panier (total, nombre de produits, etc.) si nécessaire
-      // ...
+            // Récupérez la valeur de la clé point_rouge du localStorage
+            const pointRougeValue = localStorage.getItem('point_rouge');
 
-      // Vous pouvez également ajouter des événements ou des fonctionnalités supplémentaires ici
-    }
+            // Récupérez l'élément point-rouge
+            const pointRouge = document.querySelector('.point-rouge');
 
-    // Appeler la fonction pour mettre à jour le panier au chargement de la page
-    updateCart();
+            // Vérifiez la valeur et définissez le style en conséquence
+            if (pointRougeValue === 'on') {
+              pointRouge.style.display = 'block';
+            } else {
+              pointRouge.style.display = 'none';
+            }
+
+            // point_rouge 
+          }
+      // Appeler la fonction pour mettre à jour le panier au chargement de la page
+      updateCart();
+
 
 
 
@@ -194,7 +218,7 @@
     }
   </script>
 
-<script src="/script/index.js"></script>
+  <script src="/script/index.js"></script>
 
 </body>
 
