--- a/views/Detail.ejs
+++ b/views/Detail.ejs
@@ -122,7 +122,8 @@
         pointRouge();
 
         // Afficher un message ou effectuer d'autres actions si nécessaire
-        alert('Ajouté au panier')
+        alert('Ajouté au panier');
+        location.reload();
       }
 
       // Fonction pour mettre à jour le contenu du panier
