--- a/public/css/appart.css
+++ b/public/css/appart.css
@@ -322,7 +322,7 @@ margin-right: 20px;
   position: fixed;
   top: 0;
   right: 0;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   max-height: 100vh;
   transition: 0.3s ease-in-out;
   padding-bottom: 90px; /* Ajoutez une marge inférieure pour .panier-footer */
