--- a/public/css/produit-list.css
+++ b/public/css/produit-list.css
@@ -12,6 +12,8 @@
 /* la navigation ici  */
 body {
 background-color: white;
+position: relative;
+overflow: visible; /* Assurez-vous que le défilement est autorisé sur le corps et le HTML */
 
 }
 a{
@@ -219,7 +221,9 @@ body .burger-nav {
   overflow-y: auto; /* Permet le défilement vertical lorsque le contenu dépasse la hauteur maximale */
 }
 
-
+.scroll-annule{
+  overflow: hidden;
+}
 .burger-nav #menu-link{
   display: none;
   padding: 10px;
@@ -268,18 +272,18 @@ margin-right: 20px;
 
 /* mon panier ici  */
 .monPanier {
-  background-color: #f1f0f8;
+  background-color: white;
   width: 0%; /* Ajusté pour occuper toute la largeur */
   min-height: 100vh;
   max-height: 100vh;
-  z-index: 10;
+  z-index: 100;
   position: fixed;
   top: 0;
   right: 0;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   max-height: 100vh;
   transition: 0.3s ease-in-out;
-  padding-bottom: 90px; /* Ajoutez une marge inférieure pour .panier-footer */
+  padding-bottom: 190px; /* Ajoutez une marge inférieure pour .panier-footer */
   
 }
 
@@ -303,7 +307,7 @@ margin-right: 20px;
 .monPanier .center {
   padding: 10px;
   max-height: calc(100vh - 100px); /* Ajusté la hauteur maximale */
-  overflow-y: auto; /* Défilement si nécessaire */
+  overflow-y: scroll; /* Défilement si nécessaire */
 }
 
 .monPanier .panier-vide {
