--- a/views/composants/panier.ejs
+++ b/views/composants/panier.ejs
@@ -12,8 +12,9 @@
     </div>
 
 
+    <br> <br> <br> <br> <br><br> <br> <br> <br> <br>
   </div>
-  <div class="panier-footer">
+  <div class="panier-footer" id="panier-footer">
     <div class="footer-top">
       <span><strong>Total</strong></span> <span>Nombre</span>
     </div>
@@ -33,12 +34,13 @@
 
     // Mettre à jour le localStorage avec le nouveau panier
     localStorage.setItem('lafyshop', JSON.stringify(updatedCart));
-   
+
     // Appeler la fonction pour mettre à jour le panier
     updateCart();
   }
 
-
+// Définir la couleur par défaut du bouton "Commander"
+  const defaultButtonColor = 'blue';  // Vous pouvez définir la couleur par défaut ici
 
 
   // Fonction pour mettre à jour le contenu du panier
@@ -53,10 +55,17 @@
     // Sélectionner l'élément où vous souhaitez afficher les produits du panier
     const centerElement = panierElement.querySelector('.center');
     const footerTopElement = panierElement.querySelector('.footer-top');
+    const commanderButton = document.querySelector('.panier-footer button');
+    const panierFooter = document.getElementById('panier-footer');
 
     // Si le panier est vide, afficher un message approprié
     if (cart.length === 0) {
-      centerElement.innerHTML = `
+          // Désactiver le bouton si le panier est vide
+    commanderButton.disabled ;
+    commanderButton.style.backgroundColor = cart.length === 0 ? 'grey' : defaultButtonColor;
+    panierFooter.style.display = 'none';
+     
+    centerElement.innerHTML = `
                       <div class="panier-vide shadow-sm" onclick="accueil()">
                           <h4>Votre panier est vide 🛒</h4> <br>
                           <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
@@ -67,21 +76,24 @@
 
       localStorage.setItem('point_rouge', 'off');
 
-    // Récupérez la valeur de la clé point_rouge du localStorage
-    const pointRougeValue = localStorage.getItem('point_rouge');
+      // Récupérez la valeur de la clé point_rouge du localStorage
+      const pointRougeValue = localStorage.getItem('point_rouge');
 
-    // Récupérez l'élément point-rouge
-    const pointRouge = document.querySelector('.point-rouge');
+      // Récupérez l'élément point-rouge
+      const pointRouge = document.querySelector('.point-rouge');
 
-    // Vérifiez la valeur et définissez le style en conséquence
-    if (pointRougeValue === 'on') {
-      pointRouge.style.display = 'block';
+      // Vérifiez la valeur et définissez le style en conséquence
+      if (pointRougeValue === 'on') {
+        pointRouge.style.display = 'block';
 
-    } else {
-      pointRouge.style.display = 'none';
-    }
+      } else {
+        pointRouge.style.display = 'none';
+      }
     } else {
       // Si le panier n'est pas vide, construire le HTML pour chaque produit
+
+      panierFooter.style.display = 'flex';
+
       const cartHTML = cart.map(product => `
   
                   <div class="produit-panier" style=" padding: 10px; display: flex; border: 1px solid rgba(128, 128, 128, 0.173); margin: 10px;">
@@ -102,15 +114,20 @@
   
                   `).join('');
 
+
+
+
       // Injecter le HTML dans l'élément du panier
       centerElement.innerHTML = cartHTML;
-
+      
       // Mettre à jour le total et le nombre de produits
       const total = cart.reduce((acc, product) => acc + parseFloat(product.price) * parseInt(product.quantity), 0);
       const totalQuantity = cart.reduce((acc, product) => acc + parseInt(product.quantity), 0);
-      footerTopElement.innerHTML = `<span><strong>Total: ${total.toFixed(2)} 0CFA</strong></span> <span>Nombre: ${totalQuantity}</span>`;
+      footerTopElement.innerHTML = `<span><strong>Total: ${total.toFixed(2)}0 CFA</strong></span> <span>Nombre: ${totalQuantity}</span>`;
+
 
     }
+
 
     // Mettre à jour d'autres éléments du panier (total, nombre de produits, etc.) si nécessaire
     // ...
@@ -118,7 +135,10 @@
     // Vous pouvez également ajouter des événements ou des fonctionnalités supplémentaires ici
   }
 
-  document.addEventListener('DOMContentLoaded', function() {
+  updateCart();
 
+
+  document.addEventListener('DOMContentLoaded', function() {
+     updateCart();
   });
 </script>
