chapeau & outfit F integrer

--- a/views/meublePage.ejs
+++ b/views/meublePage.ejs
@@ -44,7 +44,7 @@
     <br> <br>
     
     <% meubleP.forEach((produit) => { %>
-      <a href="/meublePage/<%= produit.id %>">
+      <a href="/maison/<%= produit.id %>">
 
       <div class="carte">
         <div class="card-top">
