--- a/views/outfitFPage.ejs
+++ b/views/outfitFPage.ejs
@@ -42,7 +42,8 @@
     <br> <br>
     <h3><strong>Outfit</strong></h3>
     <br> <br>
-    <% outfitsF.forEach((produit) => { %>
+    <% outfitF.forEach((produit) => { %>
+      <a href="/habitsF/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -55,7 +56,7 @@
       </div>
       </div>
 
-
+      </a>
       <% }); %>
 
    <br>
