--- a/views/sacFPage.ejs
+++ b/views/sacFPage.ejs
@@ -42,7 +42,9 @@
     <br> <br>
     <h3><strong>Sac</strong></h3>
     <br> <br>
-    <% sacFs.forEach((produit) => { %>
+    <% sacF.forEach((produit) => { %>
+      <a href="/habitsF/<%= produit.id %>">
+
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -55,8 +57,8 @@
       </div>
       </div>
 
-
-      <% }); %>
+      </a>
+    <% }); %>
 
 
    <br>
