outfitH integrer a firestore

--- a/views/outfitHPage.ejs
+++ b/views/outfitHPage.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Outfit </strong></h3>
     <br> <br>
     
-    <% outfitsH.forEach((produit) => { %>
+    <% outfitH.forEach((produit) => { %>
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
