firestore integrer dans charbonpage

--- a/views/charbon.ejs
+++ b/views/charbon.ejs
@@ -42,7 +42,8 @@
     <br> <br>
     <h3><strong>Charbon</strong></h3>
     <br> <br>
-    <% charbons.forEach((produit) => { %>
+    <% charbon.forEach((produit) => { %>
+      <a href="/chichaStore/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -55,7 +56,7 @@
       </div>
       </div>
 
-
+      </a>
       <% }); %>
 
    <br>
