firestore integrer dans puff page

--- a/views/puff.ejs
+++ b/views/puff.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Puff</strong></h3>
     <br> <br>
 
-    <% puffs.forEach((produit) => { %>
+    <% puff.forEach((produit) => { %>
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
