firestore integrer dans tel tool page

--- a/views/telTools.ejs
+++ b/views/telTools.ejs
@@ -20,7 +20,7 @@
 
 
   <!-- mon css here -->
-  <link rel="stylesheet" href="/css/telTools.css">
+  <link rel="stylesheet" href="/css/produit-list.css">
   <title>Accessoires de telephone</title>
 </head>
 
