--- a/views/hpPage.ejs
+++ b/views/hpPage.ejs
@@ -41,7 +41,7 @@
     <h3><strong>hp</strong></h3>
     <br> <br>
     
-    <% hps.forEach((produit) => { %>
+    <% hp.forEach((produit) => { %>
       <a href="/hp/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
