integration de firebase dans dell page

--- a/views/dellPage.ejs
+++ b/views/dellPage.ejs
@@ -42,7 +42,7 @@
     <br> <br>
     <h3><strong>Dell</strong></h3>
     <br> <br>
-    <% dells.forEach((produit) => { %>
+    <% dell.forEach((produit) => { %>
       <a href="/dell/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
