integration de firestore dans mac page

--- a/views/macPage.ejs
+++ b/views/macPage.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Macbook</strong></h3>
     <br> <br>
     
-    <% macs.forEach((produit) => { %>
+    <% mac.forEach((produit) => { %>
       <a href="/mac/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
