--- a/views/itelPage.ejs
+++ b/views/itelPage.ejs
@@ -42,7 +42,7 @@
     <br> <br>
     <h3><strong>Itel</strong></h3>
     <br> <br>
-    <% itels.forEach((produit) => { %>
+    <% itel.forEach((produit) => { %>
       <a href="/itel/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
