--- a/views/redmiPage.ejs
+++ b/views/redmiPage.ejs
@@ -42,7 +42,7 @@
     <br> <br>
     <h3><strong>Redmi</strong></h3>
     <br> <br>
-    <% redmis.forEach((produit) => { %>
+    <% redmi.forEach((produit) => { %>
       <a href="/redmi/<%= produit.id %>">
 
       <div class="carte">
