tecno integrer avec firestore

--- a/views/tecnoPage.ejs
+++ b/views/tecnoPage.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Tecno</strong></h3>
     <br> <br>
     
-    <% tecnos.forEach((produit) => { %>
+    <% tecno.forEach((produit) => { %>
       <a href="/tecno/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
