iphones, oppo, samsung, montres page on firestore

--- a/views/iphonePage.ejs
+++ b/views/iphonePage.ejs
@@ -36,13 +36,13 @@
 
   <div class="main">
     <div class="d-flex">
-      <a style="text-decoration: none; color: black;" href="/phone">Telephone</a> /
-      <a style="text-decoration: none; color: black;" href="/iphone">Iphone</a>
+      <a style="text-decoration: none; color: black;" href="/phone">Telephones</a> /
+      <a style="text-decoration: none; color: black;" href="/iphone">Iphones</a>
     </div>
     <br> <br>
-    <h3><strong>Iphone</strong></h3>
+    <h3><strong>Iphones</strong></h3>
     <br> <br>
-    <% iphones.forEach((produit) => { %>
+    <% iphone.forEach((produit) => { %>
       <a href="/iphone/<%= produit.id %>">
       <div class="carte" data-product-id="iphone_<%= produit.id %>">
         <div class="card-top">
