--- a/views/samsungPage.ejs
+++ b/views/samsungPage.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Samsung</strong></h3>
     <br> <br>
     
-    <% samsungs.forEach((produit) => { %>
+    <% samsung.forEach((produit) => { %>
       <a href="/samsung/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
