montreCo, bague, chaine integrer avec firestore

--- a/views/bague.ejs
+++ b/views/bague.ejs
@@ -42,7 +42,7 @@
     <br> <br>
     <h3><strong>Bagues</strong></h3>
     <br> <br>
-    <% bagues.forEach((produit) => { %>
+    <% bague.forEach((produit) => { %>
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
