--- a/views/chaine.ejs
+++ b/views/chaine.ejs
@@ -42,7 +42,7 @@
     <br> <br>
     <h3><strong>Chaines</strong></h3>
     <br> <br>
-    <% chaines.forEach((produit) => { %>
+    <% chaine.forEach((produit) => { %>
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
