firestore add beauter,enfant,deco,vehicule,montre

--- a/views/beauter.ejs
+++ b/views/beauter.ejs
@@ -41,7 +41,7 @@
     <br> <br>
     <h3><strong>Beauter</strong></h3>
     <br> <br>
-    <% beauters.forEach((produit) => { %>
+    <% beauter.forEach((produit) => { %>
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
