--- a/views/enfant.ejs
+++ b/views/enfant.ejs
@@ -32,8 +32,6 @@
   <%- include('composants/panier.ejs') %>
 
 
-
-
   <div class="main">
     <div class="d-flex">
       <a style="text-decoration: none; color: black;" href="#">Enfants </a>
@@ -41,7 +39,7 @@
     <br> <br>
     <h3><strong>Enfants</strong></h3>
     <br> <br>
-    <% enfants.forEach((produit) => { %>
+    <% enfant.forEach((produit) => { %>
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
