firestore on fours , mixeurs, decopage

--- a/views/decoPage.ejs
+++ b/views/decoPage.ejs
@@ -41,6 +41,8 @@
     <h3><strong>Decoration</strong></h3>
     <br> <br>
     <% deco.forEach((produit) => { %>
+      <a href="/maison/<%= produit.id %>">
+
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -53,7 +55,7 @@
       </div>
       </div>
 
-
+      </a>
       <% }); %>
 
    <br>
