--- a/views/mixeurs.ejs
+++ b/views/mixeurs.ejs
@@ -43,6 +43,8 @@
     <h3><strong>Mixeurs</strong></h3>
     <br> <br>
     <% mixeurs.forEach((produit) => { %>
+      <a href="/electro/<%= produit.id %>">
+
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -55,7 +57,7 @@
       </div>
       </div>
 
-
+      </a>
       <% }); %>
 
    <br>
