toute les page sont integrer avec firestore

--- a/views/cusinieres.ejs
+++ b/views/cusinieres.ejs
@@ -42,7 +42,7 @@
     <br> <br>
     <h3><strong>Cusinieres</strong></h3>
     <br> <br>
-    <% cusinieres.forEach((produit) => { %>
+    <% cusiniere.forEach((produit) => { %>
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
