adapter le rendu de detail view avec firestore

--- a/views/chaine.ejs
+++ b/views/chaine.ejs
@@ -42,7 +42,9 @@
     <br> <br>
     <h3><strong>Chaines</strong></h3>
     <br> <br>
-    <% chaine.forEach((produit) => { %>
+    <% chaines.forEach((produit) => { %>
+      <a href="/chaine/<%= produit.id %>">
+
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -54,7 +56,7 @@
       <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
       </div>
       </div>
-
+      </a>
 
       <% }); %>
 
