--- a/views/montresPage.ejs
+++ b/views/montresPage.ejs
@@ -40,7 +40,8 @@
     <br> <br>
     <h3><strong>Montres </strong></h3>
     <br> <br>
-    <% montre.forEach((produit) => { %>
+    <% montres.forEach((produit) => { %>
+      <a href="/montresPage/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -52,7 +53,7 @@
       <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
       </div>
       </div>
-
+      </a>
 
       <% }); %>
 
