--- a/views/pcTools.ejs
+++ b/views/pcTools.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Accessoire</strong></h3>
     <br> <br>
 
-    <% pcTools.forEach((produit) => { %>
+    <% pctools.forEach((produit) => { %>
       <a href="/pctools/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
