--- a/views/telTools.ejs
+++ b/views/telTools.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Accessoires </strong></h3>
     <br> <br>
     
-    <% telTools.forEach((produit) => { %>
+    <% teltools.forEach((produit) => { %>
       <a href="/teltools/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
