adaptation de detail v de arome et puff firestore

--- a/views/puff.ejs
+++ b/views/puff.ejs
@@ -42,6 +42,7 @@
     <br> <br>
 
     <% puff.forEach((produit) => { %>
+      <a href="/puff/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -53,8 +54,7 @@
       <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
       </div>
       </div>
-
-
+      </a>
       <% }); %>
 
    <br>
