adaptaion de firestore a la vue de details

--- a/views/ceintureHPage.ejs
+++ b/views/ceintureHPage.ejs
@@ -44,7 +44,7 @@
     <br> <br>
     
     <% ceintureH.forEach((produit) => { %>
-      <a href="/habitsH/<%= produit.id %>">
+      <a href="/ceintureH/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
