--- a/views/charbon.ejs
+++ b/views/charbon.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Charbon</strong></h3>
     <br> <br>
     <% charbon.forEach((produit) => { %>
-      <a href="/chichaStore/<%= produit.id %>">
+      <a href="/charbon/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
