--- a/views/chaussuresHPage.ejs
+++ b/views/chaussuresHPage.ejs
@@ -43,6 +43,7 @@
     <h3><strong>Chaussures</strong></h3>
     <br> <br>
     <% chaussuresH.forEach((produit) => { %>
+      <a href="/chaussuresH/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
