--- a/views/outfitFPage.ejs
+++ b/views/outfitFPage.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Outfit</strong></h3>
     <br> <br>
     <% outfitF.forEach((produit) => { %>
-      <a href="/habitsF/<%= produit.id %>">
+      <a href="/outfitF/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
