--- a/views/sacFPage.ejs
+++ b/views/sacFPage.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Sac</strong></h3>
     <br> <br>
     <% sacF.forEach((produit) => { %>
-      <a href="/habitsF/<%= produit.id %>">
+      <a href="/sacF/<%= produit.id %>">
 
       <div class="carte">
         <div class="card-top">
