--- a/views/chapeauPage.ejs
+++ b/views/chapeauPage.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Chapeau</strong></h3>
     <br> <br>
     <% chapeau.forEach((produit) => { %>
-      <a href="/habitsH/<%= produit.id %>">
+      <a href="/chapeau/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
