--- a/views/chaussetteHPage.ejs
+++ b/views/chaussetteHPage.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Chaussettes </strong></h3>
     <br> <br>
     <% chaussetteH.forEach((produit) => { %>
-      <a href="/habitsH/<%= produit.id %>">
+      <a href="/chaussetteH/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
