--- a/views/sacHPage.ejs
+++ b/views/sacHPage.ejs
@@ -41,7 +41,7 @@
     <h3><strong>Sac</strong></h3>
     <br> <br>
     <% sacH.forEach((produit) => { %>
-      <a href="/habitsH/<%= produit.id %>">
+      <a href="/sacH/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
